- headless mode - increased page loading awaiting timeout - libs & plugins versions updated - test prioritization added - minor improvements